@startuml

title __LOGICALOPERATORS's Class Diagram__\n

  namespace gr.ds.unipi.noda.api.mongo {
    namespace filterOperators.logicalOperators {
      abstract class gr.ds.unipi.noda.api.mongo.filterOperators.logicalOperators.LogicalOperator {
          + getOperatorExpression()
          # LogicalOperator()
          {abstract} # getOperatorJsonField()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.mongo {
    namespace filterOperators.logicalOperators {
      class gr.ds.unipi.noda.api.mongo.filterOperators.logicalOperators.MongoDBLogicalOperatorFactory {
          + newOperatorAnd()
          + newOperatorOr()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.mongo {
    namespace filterOperators.logicalOperators {
      class gr.ds.unipi.noda.api.mongo.filterOperators.logicalOperators.OperatorAnd {
          {static} + newOperatorAnd()
          # getOperatorJsonField()
          - OperatorAnd()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.mongo {
    namespace filterOperators.logicalOperators {
      class gr.ds.unipi.noda.api.mongo.filterOperators.logicalOperators.OperatorOr {
          {static} + newOperatorOr()
          # getOperatorJsonField()
          - OperatorOr()
      }
    }
  }
  

  gr.ds.unipi.noda.api.mongo.filterOperators.logicalOperators.LogicalOperator -up-|> gr.ds.unipi.noda.api.core.operators.filterOperators.logicalOperators.LogicalOperator
  gr.ds.unipi.noda.api.mongo.filterOperators.logicalOperators.MongoDBLogicalOperatorFactory -up-|> gr.ds.unipi.noda.api.core.operators.filterOperators.logicalOperators.BaseLogicalOperatorFactory
  gr.ds.unipi.noda.api.mongo.filterOperators.logicalOperators.OperatorAnd -up-|> gr.ds.unipi.noda.api.mongo.filterOperators.logicalOperators.LogicalOperator
  gr.ds.unipi.noda.api.mongo.filterOperators.logicalOperators.OperatorOr -up-|> gr.ds.unipi.noda.api.mongo.filterOperators.logicalOperators.LogicalOperator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
